--- a/css/responsive.css
+++ b/css/responsive.css
@@ -179,7 +179,7 @@
     /*Home section home section home section home section home section home section home section*/
     .Home-banner {
         height: 500px;
-        background-size: contain;
+        background-size: cover;
         background-position: 0px 0px;
     }
 
@@ -361,7 +361,7 @@
     .Home-banner {
         width: 100%;
         height: 400px !important;
-        background-size: contain;
+        background-size: cover;
     }
     .name-box {
         top: 200px;
