--- a/css/main.css
+++ b/css/main.css
@@ -1033,7 +1033,8 @@ font-family: 'Poppins', sans-serif;
 
 .professional-skill h3{
     width:100%;
-    float:left
+    float:left;
+    text-align: center;
 }
 .professional-skill ul{
     top:40px
@@ -1049,12 +1050,14 @@ font-family: 'Poppins', sans-serif;
 }
 .additional h3{
     margin-top:0px;
+    text-align: center
 }
 .circleSec{
      display: inline-flex;
      width:100%;
      position:relative;
-    top:50px
+    top:50px;
+    text-align: center;
 }
 .circle{
     height:220px;
@@ -1170,7 +1173,8 @@ box-shadow: inset 0px 0px 46px -4px rgba(0,0,0,0.75);
 .testimonial-section{
     width:100%;
     background:#f7f7f7;
-    height:800px
+    height:800px;
+    text-align: center
 }
 
 
@@ -1182,7 +1186,8 @@ box-shadow: inset 0px 0px 46px -4px rgba(0,0,0,0.75);
 .testimonial h1{
     margin-top:0px;
     position:relative;
-    top:-50px
+    top:-50px;
+    text-align:center;
 }
 
 .slider li img{
@@ -1195,12 +1200,14 @@ box-shadow: 0px 74px 32px -72px rgba(0,0,0,0.75);
 }
 .slider li h2{
     margin-bottom:0;
+    text-align:center;
 }
 .slider li h5{
     font-size:16px;
     margin-top:5px;
     color: green;
-    font-weight:600
+    font-weight:600;
+    text-align:center;
 }
 
 .slider li p{
@@ -1209,12 +1216,14 @@ box-shadow: 0px 74px 32px -72px rgba(0,0,0,0.75);
     color:#606060;
     position:relative;
     line-height:2;
+    text-align:center;
 }
 .slider li span{
    font-size:70px;
     line-height:0;
     position:relative;
-    top:30px
+    top:30px;
+    text-align:center;
 }
 
 .lets-section{
@@ -1235,11 +1244,13 @@ box-shadow: 0px 74px 32px -72px rgba(0,0,0,0.75);
 
 .lets h3{
     margin:0;
+    text-align:center
 }
 
 .lets h2{
     font-size:40px;
-    margin: 25px 0px
+    margin: 25px 0px;
+    text-align: center
 }
 
 .lets a{
