Simple changes in Responsive css

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -253,6 +253,10 @@
     .home-portfolio {
         padding-bottom: 150px;
     }
+    
+    .filterNav {
+       width:730px;
+    }
 
 
     .element-item {
