--- a/css/filter.css
+++ b/css/filter.css
@@ -9,8 +9,9 @@
     position:relative;
     top:15%;
     z-index:100;
-    width:700px;
     margin:0 auto;
+    text-align: center;
+    width:100%
 }
 
 
@@ -19,13 +20,13 @@
 /* ---- button ---- */
 
 .button{
-  display: inline-block;
   padding:1px 11px;
   background:none;
   font-size: 18px;
   cursor: pointer;
 font-family:serif;
-    transition:.5s
+    transition:.5s;
+    margin:0 auto
 }
 
 .button:hover {
@@ -52,7 +53,6 @@ font-family:serif;
 }
 
 .button-group .button {
-  float: left;
   border-radius: 0;
   margin-left: 0;
   border: none !important;
