--- a/css/main.css
+++ b/css/main.css
@@ -1559,7 +1559,7 @@ box-shadow: 0px 0px 29px -6px rgba(0,0,0,0.75);
     margin:0 auto;
     width:70%;
     height:90px;
-    margin-top:50px
+    margin-top:50px;
 }
 .sameAdd img{
     float: left;
@@ -1636,7 +1636,8 @@ box-shadow: 0px 0px 29px -6px rgba(0,0,0,0.75);
     cursor:pointer;
     position:relative;
     top:40px;
-    float:right
+    float:right;
+    text-transform:capitalize;
 }
 #button:hover{
     background:white;
@@ -1651,7 +1652,7 @@ box-shadow: 0px 0px 29px -6px rgba(0,0,0,0.75);
 
 .my-map{
     height:300px;
-    width:50%;
+    width:0%;
     margin:0 auto;
     max-width:900px;
     position:relative;
