--- a/css/responsive.css
+++ b/css/responsive.css
@@ -113,29 +113,99 @@
     }
 
 
-    
-    .work-banner{
-    height:450px;
+
+    .work-banner {
+        height: 450px;
+    }
+
+
+
+    .wrap {
+        width: 95%;
+    }
+    .wrap h1 {
+        font-size: 40px;
+    }
+
+
+
 }
-    
-    
-    
-    .wrap{
-    width:95%;
+
+
+
+
+
+@media only screen and (max-width: 1022px) {
+
+
+    .contact-page {
+        width: 100%;
+        height: 970px;
+    }
+
+
+
+
+
+    .contact-down h1 {
+        padding-bottom: 50px
+    }
+
+    .address {
+        width: 100%;
+        margin-top: 0px;
+    }
+    .sameAdd {
+        width: 33%;
+        height: 175px;
+        float: left;
+        margin-top: 0px;
+        text-align: center;
+    }
+    .sameAdd img {
+        width: 70px;
+        float: none;
+
+    }
+    .sameAdd p {
+        float: left;
+        width: 100%;
+        text-align: center;
+        margin-left: 0px;
+        margin-top: 25px
+    }
+    .formSite {
+        width: 100%;
+        float: left;
+        margin-top: 30px
+    }
+
+
+    .fill {
+        width: 65%;
+        float: none;
+        margin: 0 auto
+    }
+    .my-map {
+        height: 350px;
+        width: 80%;
+        margin: 0 auto;
+        max-width: 900px;
+        position: relative;
+        top: -30px
+    }
+
+
+
+
+
+
+
+
+
+
+
 }
-    .wrap h1{
-    font-size:40px;
-}
-    
-
-
-}
-
-
-
-
-
-@media only screen and (max-width: 1024px) {}
 
 
 
@@ -253,7 +323,7 @@
     .home-portfolio {
         padding-bottom: 150px;
     }
-    
+
 
 
     .element-item {
@@ -315,7 +385,7 @@
     .skill-section {
         height: 1100px;
         width: 100%;
-        text-align:center;
+        text-align: center;
     }
 
 
@@ -380,7 +450,7 @@
     }
     .button {
         margin-top: 8px;
-         padding: 1px 8px;
+        padding: 1px 8px;
     }
 
 
@@ -666,7 +736,7 @@
         height: 200px;
         margin-top: 15px;
         overflow: hidden;
-        margin-left:5%
+        margin-left: 5%
     }
 
 
@@ -1039,41 +1109,85 @@
         font-size: 19px;
 
     }
-    
-    
-    
-   /* work page work page work page work page work page work page work page*/
-    
-    
-     .work-banner{
-    height:300px;
-}
-    
-    .wrap{
-    width:100%;
-}
-    .wrap h1{
-    font-size:27px;
-}
-    
-    #textSlider{
-        position:relative;
-        top:10px
+
+
+
+    /* work page work page work page work page work page work page work page*/
+    .work-banner {
+        height: 300px;
     }
-    
+
+    .wrap {
+        width: 100%;
+    }
+    .wrap h1 {
+        font-size: 27px;
+    }
+
+    #textSlider {
+        position: relative;
+        top: 10px
+    }
+
+
+
+
+
+    /*contact page contact page contact page contact page contact page contact page contact page contact page contact page contact page contact page contact page*/
+    .contact-page {
+        height: 1050px;
+    }
+
+
+
+
+
+    .contact-down h1 {
+        padding-bottom: 20px;
+        font-size: 35px
+    }
+
+    .sameAdd {
+        width: 100%;
+        height: 130px;
+        float: none;
+    }
+    .sameAdd p {
+        margin-top: 2px
+    }
+    .formSite {
+        margin-top: 10px
+    }
+
+
+    .fill {
+        width: 85%;
+    }
+
+    .map-section {
+        height: 200px;
+
+    }
+    .my-map {
+        height: 200px;
+        width: 100%;
+        top: 0px
+    }
+
+
+
+
+
 
 
 }
 
 
-    
-    
-    
-    
-    
 
 
-}
+
+
+
 
 
 
