--- a/css/filter.css
+++ b/css/filter.css
@@ -84,7 +84,7 @@ font-family:serif;
   color: #262524;
     width:28%;
     margin-left:3.5%;
-    height:250px;
+    height:240px;
      margin-top:30px;
     overflow:hidden;
     text-align:center;
@@ -94,7 +94,9 @@ font-family:serif;
     transition:.5s;
     text-align:center;
     transform:scale(1);
-    transition:.6s
+    transition:.6s;
+     width:100%;
+    height:100%
 }
 .link{
     height:100%;
