make resposive for mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1449,7 +1449,15 @@
 
 
 
-
+.service-page-about{
+    background:#f7f7f7;
+    height:800px;
+}
+.service-des{
+    width:95%;
+    margin:0 auto;
+}
+    
 
 
     
